# T-Whisper

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
docs/plans/: 2026-05-23-t-whisper-design.md  2026-05-23-t-whisper-rust-architecture.md
legacy-shell/: Makefile  install.sh  uninstall.sh
legacy-shell/libexec/: common.sh  doctor.sh  file.sh  live.sh  models.sh  rec.sh  render.py  trad.sh  update.sh
legacy-shell/test/: smoke.sh
src/: audio.rs  capture.rs  config.rs  diarize.rs  env.rs  live.rs  main.rs  models.rs  trad.rs  transcribe.rs  ui.rs
