[package]
name = "t-whisper"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.17.3"
ctrlc = "3.5.2"
hound = "3.5.1"
sherpa-rs = "0.6.8"
symphonia = { version = "0.5.4", features = ["mp3", "aac", "isomp4", "wav", "pcm"] }
whisper-rs = { version = "0.16.0", features = ["metal"] }
